# Gaussian-LERF

./: README.md  config.yml  pyproject.toml
lerf_gaussian/: dig.py  lerf_gaussian.py  lerf_gaussian_config.py  lerf_gaussian_field.py  lerf_gaussian_pipeline.py  zed.py
lerf_gaussian/data/: lerf_gaussian_datamanager.py
lerf_gaussian/data/utils/: dino_extractor.py  feature_dataloader.py  patch_embedding_dataloader.py  pyramid_embedding_dataloader.py
lerf_gaussian/encoders/: clip_encoder.py  openclip_encoder.py
